🐛 Fixed bugs and typos

--- a/src/index.css
+++ b/src/index.css
@@ -82,8 +82,8 @@
     justify-content: center;
 }
 .error-container img{
-    width: 400px;
-    height: 400px;
+    width: 60%;
+    height: 90%;
 }
 /* Error Ends */
 
